--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -14,7 +14,22 @@
   ~ limitations under the License.
   -->
 
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" >
+    <PreferenceCategory app:title="Seekbar demonstration">
+        <!--weirdly, max is only defined in the android namespace, not the app namespace,
+       <!--so add the android namespace to the following SeekBarPreference-->
+
+        <SeekBarPreference xmlns:android="http://schemas.android.com/apk/res/android"
+            app:key="seek_bar_key"
+            app:title="A seekbar title"
+            app:summary="and a summary"
+            app:defaultValue="@integer/seek_bar_default"
+            app:min="0"
+            android:max="1000"
+            app:enabled="true"
+            app:showSeekBarValue="true"
+            />
+    </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/messages_header">
 
